--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,18 +37,15 @@ ext {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+
     compile "com.android.support:appcompat-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
     compile "com.android.support:recyclerview-v7:$supportVersion"
 
     compile "com.hannesdorfmann.mosby:mvp:$mosby"
 
-
-
     compile "com.jakewharton:butterknife:$butterknifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
 
     compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
     compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
@@ -56,7 +53,12 @@ dependencies {
 
     compile 'org.greenrobot:greendao:3.2.2'
 
-    testCompile 'junit:junit:4.12'
-    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknifeVersion"
     compile 'org.jetbrains:annotations-java5:15.0'
+    testCompile 'junit:junit:4.12'
+    androidTestCompile "com.android.support:support-annotations:$supportVersion"
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
